remove usages of deprecated APIs