@@ -6,7 +6,7 @@ public abstract class GTTemplateInstanceFactory {
 
     public GTJavaBase create(GTTemplateRepo templateRepo) {
         try {
-            GTJavaBase templateInstance = getTemplateClass().newInstance();
+            GTJavaBase templateInstance = getTemplateClass().getDeclaredConstructor().newInstance();
             // Must tell the template Instance where the current templateRepo is - needed when processing #{extends} and custom tags
             templateInstance.templateRepo = templateRepo;
             return templateInstance;
